# xors

./: README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  question.md
.github/workflows/: cd.yml  ci.yml  devskim.yml
xors-api/: .env.dev  .gitignore  .justfile  Cargo.toml  Dockerfile  Justfile  README.md  api_des.md  flowchart.mermaid  openapi.json
xors-api/entity/: Cargo.toml
xors-api/entity/src/: lib.rs
xors-api/entity/src/entities/: captcha.rs  game.rs  mod.rs  prelude.rs  user.rs
xors-api/migration/: Cargo.toml
xors-api/migration/src/: lib.rs  m20240108_114814_user_table.rs  m20240111_114045_captcha_table.rs  m20240119_135153_game.rs  m20240201_110331_add_start_chat_columns_to_game_table.rs  main.rs
xors-api/profile_images/: 00000000-0000-0000-0000-000000000000  default
xors-api/src/: db_utils.rs  errors.rs  lib.rs  main.rs  utils.rs
xors-api/src/api/: exts.rs  game.rs  impls.rs  jwt.rs  mod.rs  user.rs  xo.rs
xors-api/src/schemas/: game.rs  jwt.rs  mod.rs  user.rs  xo.rs
xors-api/src/tests/: game.rs  jwt.rs  mod.rs  user.rs
xors-api/tests/: game.rs  jwt.rs  mod.rs  user.rs
xors-web/: index.html  package-lock.json  package.json
xors-web/src/: App.jsx  index.css  main.jsx
xors-web/src/app/: store.js
xors-web/src/app/slices/: ai.js  oneVsone.js
xors-web/src/components/: index.js
xors-web/src/components/Board/: Board.jsx  board.css
xors-web/src/components/Players/: Players.jsx  players.css
xors-web/src/containers/: index.js
xors-web/src/containers/Footer/: Footer.jsx  footer.css
xors-web/src/containers/Nav/: Nav.jsx  nav.css
xors-web/src/pages/: index.Js
xors-web/src/pages/Ai/: Ai.jsx  ai.css
xors-web/src/pages/Choose/: Choose.css  Choose.jsx
xors-web/src/pages/Home/: Home.jsx
xors-web/src/pages/OneVsOne/: OneVsOne.jsx  onevsone.css
