[package]
authors = ["TheAwiteb <Awiteb@pm.me>"]
description = "A RESTful tic tac toy API for XORS project"
edition = "2021"
license = "AGPL-3.0-or-later"
name = "xors-api"
readme = "README.md"
repository = "https://github.com/TheAwiteb/xors"
rust-version = "1.75.0"
version = "0.1.0"

[workspace]
members = [".", "entity", "migration"]

[[bin]]
name = "generate-openapi"
path = "src/bin/generate-openapi.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
async-trait = "0.1.77"
base64 = "0.21.6"
bcrypt = "0.15.0"
captcha = "0.0.9"
chrono = "0.4.31"
derive-new = "0.6.0"
easy-ext = "1.0.1"
entity = {path = "entity"}
futures-util = {version = "0.3.30", features = ["sink"]}
image = {version = "0.24.8", features = ["png"], default-features = false}
jsonwebtoken = "9.2.0"
log = "0.4.20"
migration = {path = "migration"}
once_cell = "1.19.0"
passwords = {version = "3.1.16", features = ["common-password"]}
pgp = "0.10.2"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
salvo = {version = "0.65.0", features = [
  "logging",
  "affix",
  "oapi",
  "jwt-auth",
  "rate-limiter",
  "websocket",
]}
salvo-captcha = {version = "0.1.0", features = ["cacache-storage"]}
sea-orm = {version = "0.12.10", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "with-uuid",
  "with-chrono",
  "macros",
]}
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.108"
thiserror = "1.0.56"
tokio = {version = "1.35.1", features = ["macros", "rt-multi-thread", "signal", "sync"]}
tokio-stream = {version = "0.1.14", features = ["net"]}
uuid = {version = "1.6.1", features = ["v4"]}
